[metadata]
name = potts
version = 0.0.1
author = Alexandre Ribeiro
author_email = engribeiroale@gmail.com
description = A package for the engineering analysis of power transmission shafts
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/ribeiroale/potts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9